adding update/add components

--- a/src/app/pages/users/list-users/list-users.component.html
+++ b/src/app/pages/users/list-users/list-users.component.html
@@ -36,7 +36,7 @@
                     <ul id="dropdown-basic" ngbDropdownMenu class="dropdown-menu" role="menu"
                         aria-labelledby="button-basic">
                         <li role="menuitem" class="custom-menuitem">
-                            <a class="dropdown-item grey-menuitem" href="javascript:;">
+                            <a class="dropdown-item grey-menuitem" href="javascript:;" (click)="updateUser(user.id,user.first_name,user.last_name)">
                                 <i class="bi bi-pencil-fill"></i> {{ 'pages.users.buttons.update'|translate }}
                             </a>
                         </li>
