--- a/src/app/pages/users/add-user/add-user.component.html
+++ b/src/app/pages/users/add-user/add-user.component.html
@@ -1,3 +1,28 @@
 <div class="content">
     <h4>{{ 'pages.users.add_page.title' | translate }}</h4>
+    <form #userForm="ngForm" class="row g-3" (ngSubmit)="onSubmitUser()">
+        <div>
+            <label for="firstName" class="form-label">First Name</label>
+            <input type="text" class="form-control" [(ngModel)]="newUser.first_name" name="first_name" id="first_name" required>
+        </div>
+        <div>
+            <label for="lastName" class="form-label">lastName</label>
+            <input type="text" class="form-control" [(ngModel)]="newUser.last_name" name="last_name" required>
+        </div>
+        <div>
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" [(ngModel)]="newUser.email" name="email" required>
+        </div>
+        <div>
+            <label for="job" class="form-label">job</label>
+            <input type="text" class="form-control" [(ngModel)]="newUser.job" name="job">
+        </div>
+        <div>
+            <label for="phone" class="form-label">phone</label>
+            <input type="number" class="form-control" [(ngModel)]="newUser.phone" name="phone">
+        </div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-primary" [disabled]="userForm.invalid"> submit</button>
+          </div>
+    </form>
 </div>
